tests/snapshots/examples_fixtures/type_classes__ClassMatchableEffects__App__Main.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/ClassMatchableEffects/App/Main.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `ClassMatchableEffects.App.Main` doesn't match file path `examples/type_classes/ClassMatchableEffects/App/Main.flx`.

  examples/type_classes/ClassMatchableEffects/App/Main.flx:4:1
  |
4 | module ClassMatchableEffects.App.Main {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
